added functionality/route to home and logout tab of sidebar.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "javascript-time-ago": "^2.5.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "time-ago": "^0.2.1"
   },
   "devDependencies": {
