added posts profile pics add images to users page to added alert when changed image and bio and real time change when user edits their profile added functionality to change bio and change it to ui, make responsive added images only to profile page added backdrop and edit profile popup, bio cant be longer than 100 letters can only can edit bio and profile if user id == profile id

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
-    "time-ago": "^0.2.1"
+    "time-ago": "^0.2.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
